--- a/package.json
+++ b/package.json
@@ -8,20 +8,41 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "eslint './{bin,lib,test}/**/*.ts'",
+    "lint:fix": "eslint --fix './{bin,lib,test}/**/*.ts' && prettier --write './{bin,lib,test}/**/*.ts'"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.88.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "aws-cdk": "1.88.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "jest": "^26.4.2",
+    "prettier": "2.2.1",
+    "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-events": "^1.88.0",
+    "@aws-cdk/aws-events-targets": "^1.88.0",
+    "@aws-cdk/aws-lambda": "^1.88.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.88.0",
     "@aws-cdk/core": "1.88.0",
+    "aws-sdk": "^2.840.0",
+    "axios": "^0.21.1",
+    "googleapis": "^67.0.0",
+    "querystring": "^0.2.0",
     "source-map-support": "^0.5.16"
   }
 }
