--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       "prettier"
     ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
